{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player Movement",
            "id": "b51bacf0-0941-4c58-b1e9-5fee4ee2cfc4",
            "actions": [
                {
                    "name": "Locomotion",
                    "type": "PassThrough",
                    "id": "119728ee-3054-4c6b-a17d-2cd0657267c8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "646e9d09-07e1-4c5f-a88b-1833136f7670",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Tap(duration=0.4,pressPoint=0.1)",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "49f8fec9-f741-4f7f-8fc0-41eb4c183146",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold(duration=0.4,pressPoint=0.1)",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "8afb6f3a-4067-4477-8fb6-0610a5b27812",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Left Stick",
                    "id": "efa86ae1-9a34-4db1-b6ae-df93a48c13c7",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Locomotion",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "18cdcbc5-d1f2-4278-b0dc-391db391190f",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Locomotion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2e685219-4fe4-4365-bdb3-e48bea6ddabd",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Locomotion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "acdeaafc-5b31-42b2-a15b-87be1ad30658",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Locomotion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1051e5f8-8dc2-4443-a622-4d5915dc0457",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Locomotion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WSAD",
                    "id": "7e7dddd7-95dc-43e1-849e-d0fe3706d6c1",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Locomotion",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f4a0d8ab-f8ae-4099-bad9-030377a40bd8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard and Mouse",
                    "action": "Locomotion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "70451050-eeae-49c6-bcd7-fe93780add87",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard and Mouse",
                    "action": "Locomotion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "32a38685-804f-4517-af2c-0a4ea9b2188d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard and Mouse",
                    "action": "Locomotion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "377b6e2f-f904-4bcb-95f7-d5f41c1329b8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard and Mouse",
                    "action": "Locomotion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c512d0cd-814d-4a4c-b74a-cd28fa135bec",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f91e811f-53f9-4e71-8f4f-cd03c3374dbc",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard and Mouse",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0984d911-1cc4-459e-8429-656d063e08b7",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "432a2eee-c568-4b1d-a14d-c7345e08c2bb",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard and Mouse",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f707aae-209a-4368-a580-bbde5e836f8f",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d8db5b0-340c-42b1-8917-43849fb6978d",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard and Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player Camera",
            "id": "53b6235d-64fd-4742-a212-be9708ca5c42",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "eccbdb52-a181-43f4-a4e4-d25237da6e63",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LockOn",
                    "type": "Button",
                    "id": "aff6f9d8-5834-4178-8c69-b9e54be0a5f1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeLockOnToLeft",
                    "type": "Button",
                    "id": "bfabe57e-f5a5-413b-bce2-ada8773272bc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeLockOnToRight",
                    "type": "Button",
                    "id": "8a730f56-1bb1-42d5-935f-da9f8e9f3f53",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Right Stick",
                    "id": "e44cf954-3f5a-4100-8a8c-a2359795e09c",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "315945fe-d5bb-4a01-8365-c2f05b551789",
                    "path": "<Gamepad>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a158d44f-e43b-4138-80d6-fdecff495292",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8d176ca9-f0f2-40be-b09c-804db0ad2cca",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "21248fd8-6b1a-4a73-b43f-cc31051de1a6",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d3d59006-769b-4467-a51a-5cf92ad60d5e",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0b3ae97-9b0e-4c3c-b11d-49be7c53c311",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "LockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2529f551-c483-40cf-bd22-28298273f403",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard and Mouse",
                    "action": "LockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a312b5c-d3b9-46d2-8e3f-5de24ee144f2",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard and Mouse",
                    "action": "ChangeLockOnToLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50129165-0aac-423e-9fd8-f237bc49d719",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeLockOnToLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94829ed0-1b7c-4acc-8910-9ce2d903f605",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard and Mouse",
                    "action": "ChangeLockOnToRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73a4d3f1-eabc-411c-86e4-b284121e8161",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeLockOnToRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player Actions",
            "id": "bed6b19f-7466-4bb9-8b33-1d860602699e",
            "actions": [
                {
                    "name": "LightAttack",
                    "type": "Button",
                    "id": "42e906e4-ef54-4c0b-bd94-3d36ed75f6db",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HeavyAttack",
                    "type": "Button",
                    "id": "7ad2330c-bf7b-49f7-8808-c67c04881c1e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChargedAttack",
                    "type": "PassThrough",
                    "id": "78017b0a-d86c-44a0-9ffa-23b8b0af4b0a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold(pressPoint=0.1)",
                    "initialStateCheck": false
                },
                {
                    "name": "AttackTypeToggle",
                    "type": "Button",
                    "id": "dda6b8f5-2ccb-4ac2-bd33-fc356f10ec2a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ToggleWeapon",
                    "type": "Button",
                    "id": "52540c0b-5c23-46da-ba00-60b98dcc462e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "389c6fe0-f19d-4def-94ef-fb149ede94ba",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "LightAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6f53d12-4a5a-43bb-b901-41a1a65d9cde",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard and Mouse",
                    "action": "LightAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e1168bd-2874-46ff-954c-7942c41678fc",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "HeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53b92c36-1514-4686-9232-419688c0667e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Tap(duration=0.4,pressPoint=0.1)",
                    "processors": "",
                    "groups": ";Keyboard and Mouse",
                    "action": "HeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1cabb545-ffd8-4a7f-a6bf-e0c877b7a5a4",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "ChargedAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9467807d-0611-4a6a-a7b4-766fdcf97de3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard and Mouse",
                    "action": "ChargedAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7e788a5-e3c4-41de-9b11-c26412493231",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard and Mouse",
                    "action": "AttackTypeToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73e6ff31-fe46-4b21-9a82-84d2baf15d7e",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "ToggleWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0362ae4-47ac-4833-97e0-5995ac969bfd",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}